# ykep-cae

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
contracts/: validate_process_contracts.py
docs/: README.md  roadmap-aquarium.md  roadmap.md
docs/design/: README.md  aquarium-filter.md  aquarium-geometry.md  aquarium-heater.md  heat-transfer-fdm.md  multilayer-builder.md  natural-convection-fdm.md  scalar-transport-fdm.md  structured-mesh.md  temperature-map.md
docs/status/: status-1.md  status-10.md  status-11.md  status-12.md  status-13.md  status-14.md  status-15.md  status-16.md  status-3.md  (+16 more)
examples/: aquarium_filter_circulation.py  aquarium_heater_natural_convection.py  benchmark_solver_methods.py  incense_smoke_reference.py  multilayer_robin_analysis.py  multilayer_sheet_temperature.py  natural_convection_investigation.py  natural_convection_visualize.py
output/: benchmark_results.yaml  natural_convection_investigation.yaml
scripts/: convergence_evaluation.py  fdm_gs_1d_v3.py  plot_convection.py  time_estimate.py  verify_1d_joule_gauss_seidel.py
tests/: conftest.py  test_aquarium_filter.py  test_aquarium_geometry.py  test_aquarium_heater.py  test_benchmark_runner.py  test_convection_scheme.py  test_core_import.py  test_corrected_diffusion.py  test_heat_transfer_fdm.py  test_multilayer_builder.py  test_natural_convection.py  test_natural_convection_scalar.py  test_polymesh_reader.py  test_scalar_transport.py  test_structured_mesh.py  test_temperature_map.py  test_tvd_convection.py
xkep_cae_fluid/: __init__.py
(+40 files in other folders)
